Add endpoint to GET reservation by UUID
